# rz_app

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  router.py  schemas.py
app/config/: __init__.py  settings.py
app/skills/software-code-generation/: SKILL.md
app/tools/: __init__.py  word_tool.py  zip_tool.py
app/workflows/: __init__.py  agent.py  batch_generation.py  build_code_docx.py  generation.py
static/: index.html
