[project]
name = "rz-app"
version = "0.1.0"
description = "软著代码生成服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "langchain-core>=0.3.0",
    "langchain>=1.0.0",
    "langchain-deepseek>=0.1.0",
    "langgraph>=0.2.0",
    "deepagents>=0.7.0a4",
]

[tool.uv]
package = false
